--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="col-md-3 col-sm-6  galry-grids moments-bottom">
 					<div class="b-link-stripe b-animate-go" >
-						<img src="images/img3.png" class="img-responsive" alt="">
+						<img src="images/img3.jfif" class="img-responsive" alt="">
 						<div class="b-wrapper">
 							<span class="b-animate b-from-left    b-delay03 ">
 								<h4>Chess</h4>
