--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
          <div class="gallery-info">
 				<div class="col-md-3 col-sm-6  galry-grids moments-bottom">
 					<div class="b-link-stripe b-animate-go" >
-						<img src="images/img1.jfif" class="img-responsive" alt="">
+						<img src="images/pain.jfif" class="img-responsive" alt="">
 						<div class="b-wrapper">
 							<span class="b-animate b-from-left    b-delay03 ">
 								<h4>Painting</h4>
@@ -337,7 +337,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="col-md-3 col-sm-6  galry-grids moments-bottom">
 					<div class="b-link-stripe b-animate-go" >
-						<img src="images/img3.jfif" class="img-responsive" alt="">
+						<img src="images/che.jfif" class="img-responsive" alt="">
 						<div class="b-wrapper">
 							<span class="b-animate b-from-left    b-delay03 ">
 								<h4>Chess</h4>
@@ -347,7 +347,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="col-md-3 col-sm-6  galry-grids moments-bottom">
 					<div class="b-link-stripe b-animate-go" >
-						<img src="images/img2.jfif" class="img-responsive" alt="">
+						<img src="images/coo.jfif" class="img-responsive" alt="">
 						<div class="b-wrapper">
 							<span class="b-animate b-from-left    b-delay03 ">
 								<h4>Cooking</h4>
