--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 </div> -->
 
 		 <div class="top-menu"   >
-			 <span class="menu"><img src="images/me.jpg" alt=""/></span>
+			 <span class="menu"></span>
 			 <ul>
 				<li><a class="scroll" href="#head1">Home</a></li>
 				<li><a class="scroll" href="#skill">Skills</a></li>
