--- a/index.html
+++ b/index.html
@@ -290,8 +290,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<h5>SSLC</h5>
 					</div>
 					<div class="experience-right">
-						<h4>Secondary Education (Class X)</h4>
-						
+						<h4>Secondary Education (Class X)</h4						
 						<p>Breeks All India Secondary School</p><p>88%%</p>
 					</div>
 					<div class="clearfix"> </div>
@@ -347,7 +346,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="col-md-3 col-sm-6  galry-grids moments-bottom">
 					<div class="b-link-stripe b-animate-go" >
-						<img src="images/cooking.jpg" class="img-responsive" alt="">
+						<img src="images/coooook.jpg" class="img-responsive" alt="">
 						<div class="b-wrapper">
 							<span class="b-animate b-from-left    b-delay03 ">
 								<h4>Cooking</h4>
