--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				  </div>
 				  <div class="icon-info">
 						<h4>Steel Authority of India Ltd.</h4>						 
-						<p>Gained the knowledge of Instrumentation in industry regarding their automation and control of the instruments.</p>
+						<p>Gained the knowledge of Instrumentation in industry like the different types of sensors being used for various processes and also the various softwares being used for automation and control in the industry.</p>
 				  </div>
 				  <div class="clearfix"></div>
 			 </div>
@@ -238,8 +238,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	 <div class="about-right">
 		<h3>About Me</h3>
 		<h4></h4>
-		<p>Hi there, I amPreethi Shivakumar from Coimbatore. I have recently joined Cognizant Technology Solutions as an Intern 
-			on 19th Jan 2019, and about to compelete my B.E. course in EIE .
+		<p>Hi there, I am Preethi Shivakumar from Coimbatore. I have recently joined Cognizant Technology Solutions as an Intern 
+			on 19th Jan 2019, and about to compelete my B.E. course in EIE .I am an optimistic and a nature loving person.
 	 </div>
 	 <div class="clearfix"></div>
 </div>
